vault-main/vault/templates/statefulset-vault.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vault
  labels:
    app: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault
  serviceName: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      serviceAccountName: vault
      containers:
        - name: vault
          image: hashicorp/vault:1.15.4
          args:
            - "server"
          ports:
            - containerPort: 8200
          volumeMounts:
  - name: vault-storage
    mountPath: /vault/data
volumes:
  - name: vault-storage
    persistentVolumeClaim:
      claimName: vault-pvc
